--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
-selenium>=4.0.0
-pytest>=7.0.0
+selenium>=4.10.0
+pytest>=7.4.0
+webdriver-manager>=3.8.6
+pytest-html>=3.2.0  # Для генерации HTML-отчетов
