--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 selenium>=4.10.0
 pytest>=7.4.0
 webdriver-manager>=3.8.6
-pytest-html>=3.2.0  # Для генерации HTML-отчетов
+pytest-html>=3.2.0
+allure-pytest>=2.13.0  # Для красивых отчетов
