--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-selenium>=4.10.0
-pytest>=7.4.0
-webdriver-manager>=3.8.6
-pytest-html>=3.2.0
-allure-pytest>=2.13.0  # Для красивых отчетов
+selenium==4.9.0
+pytest==7.4.0
+pytest-xdist==3.3.1
+webdriver-manager==3.8.6
